interface DoorState {
    void open(Door ctx);
    void lock(Door ctx);
    void unlock(Door ctx);
}
